1.读取配置文件到ConfBean，BidManager开始执行时读入，节省I/O开销 2.在BidManager等多处开始传入 ConfBean 3.除去了BidManager中的New BasicCriteria(),则加入了BidCriteria抽象类，并修改了Criteria接口，将BasicCriteria中的两个方法加为静态，从BidCriteria中继承 4. 防止大范围修改造成问题，先提交一次